background added and correct spacing

--- a/netflixclone/styles/globals.css
+++ b/netflixclone/styles/globals.css
@@ -18,3 +18,13 @@ a {
 * {
   box-sizing: border-box;
 }
+
+.our-story-card-video {
+  width: 100%;
+  height: 100%;
+  max-width: 53%;
+  max-height: 54%;
+  position: absolute;
+  top: 88%;
+  left: 10%;
+}
